<resources>
    <string name="app_name">Social Meal</string>

    <string name="logo_image_description">Logo image</string>

    <string name="register_test">Don\'t have an account? <b>Sign up</b></string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in_button">Sign in</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="login_facebook_description">Login to facebook</string>
    <string name="login_twitter_description">Login to twitter</string>
    <string name="login_google_description">Login with google</string>

    <string name="sign_up_name">Name</string>
    <string name="sign_up_surname">Surname</string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="sign_up_sign_up_button">Sign up</string>
    <string name="sign_up_invalid_email">Invalid email.</string>
    <string name="sign_up_invalid_password">Password must contain at least 6 characters including number.</string>
    <string name="sign_up_passwords_do_not_match">Passwords don\'t match.</string>
    <string name="sign_up_field_cannot_be_empty">This field cannot be empty.</string>

    <string name="remind_password_reset">Reset password</string>
    <string name="reset_password_success">Reset password sent with success</string>
    <string name="reset_password_no_email">No account with given email</string>

    <string name="main_activity_bottom_drawer_my_events">My events</string>
    <string name="main_activity_bottom_drawer_profile">Profile</string>
    <string name="main_activity_bottom_drawer_search">Search</string>
    <string name="profile_name">Name</string>
    <string name="profile_surname">Surname</string>
    <string name="profile_street">Street</string>
    <string name="profile_city">City</string>
    <string name="profile_post_code">Postcode</string>
    <string name="profile_save_changes">Save changes</string>
    <string name="profile_background_image_description">Background image</string>
    <string name="profile_background_avatar_description">User avatar</string>

    <string name="profile_sign_out">Sign out</string>
    <string name="profile_personal_details">Personal details</string>
    <string name="profile_account">Account</string>
    <string name="profile_change_password">Change password</string>
    <string name="profile_user_score">User score</string>
    <string name="profile_about_me">About me</string>
    <string name="profile_mock_score">4.98</string>

    <string name="timeout_exception">Server is taking too long to respond</string>
    <string name="connect_exception">No internet connection</string>
    <string name="unknown_host_exception">Couldn\'t connect to a server</string>
    <string name="unknown_exception">An unknown error has occurred</string>
    <string name="unknown_http_exception">An unknown network error has occurred</string>
    <string name="http_error_500">Something wrong with server</string>
    <string name="email_is_taken">Email is already taken</string>
    <string name="wrong_email_or_password">Wrong email or password</string>

    <string name="not_implemented_yet">Not implemented yet</string>

    <string name="profile_update_success">Profile update success</string>

    <string name="food_type_italian">Italian</string>
    <string name="food_type_polish">Polish</string>
    <string name="food_type_undefined">Undefined</string>

</resources>
