<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:fitsSystemWindows="true"
    android:scrollbarStyle="outsideOverlay"
    tools:background="@drawable/login_animation_list">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:paddingBottom="@dimen/margin_very_big"
        android:paddingTop="@dimen/margin_big">

        <android.support.constraint.Guideline
            android:id="@+id/loginLeftGuideLine"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_big" />

        <android.support.constraint.Guideline
            android:id="@+id/loginRightGuideLine"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_big" />

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="@dimen/login_logo_size"
            android:layout_height="@dimen/login_logo_size"
            android:contentDescription="@string/logo_image_description"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuideLine"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_logo" />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/marcellus"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/login_title_size"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/loginLogo" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginLogin"
            style="@style/LoginTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginPassword"
            style="@style/LoginTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/loginLogin" />

        <com.marcinstramowski.socialmeal.views.ProgressButton
            android:id="@+id/loginProgressButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword"
            app:progress_button_text="@string/login_sign_in_button" />

        <TextView
            android:id="@+id/resetPasswordButton"
            style="@style/LoginTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:text="@string/login_forgot_password"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
            app:layout_constraintTop_toBottomOf="@id/loginProgressButton" />


        <ImageButton
            android:id="@+id/sign_in_facebook_button"
            android:layout_width="@dimen/login_social_button_size"
            android:layout_height="@dimen/login_social_button_size"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/button_social_selector"
            android:contentDescription="@string/login_facebook_description"
            app:layout_constraintEnd_toStartOf="@+id/sign_in_twitter_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuideLine"
            app:layout_constraintTop_toBottomOf="@id/resetPasswordButton"
            app:srcCompat="@drawable/facebook_logo" />

        <ImageButton
            android:id="@+id/sign_in_twitter_button"
            android:layout_width="@dimen/login_social_button_size"
            android:layout_height="@dimen/login_social_button_size"
            android:background="@drawable/button_social_selector"
            android:contentDescription="@string/login_twitter_description"
            app:layout_constraintEnd_toStartOf="@+id/sign_in_google_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sign_in_facebook_button"
            app:layout_constraintTop_toBottomOf="@id/resetPasswordButton"
            app:layout_constraintTop_toTopOf="@id/sign_in_facebook_button"
            app:srcCompat="@drawable/twitter_logo" />

        <ImageButton
            android:id="@+id/sign_in_google_button"
            android:layout_width="@dimen/login_social_button_size"
            android:layout_height="@dimen/login_social_button_size"
            android:background="@drawable/button_social_selector"
            android:contentDescription="@string/login_google_description"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sign_in_twitter_button"
            app:layout_constraintTop_toBottomOf="@id/resetPasswordButton"
            app:layout_constraintTop_toTopOf="@id/sign_in_facebook_button"
            app:srcCompat="@drawable/google_logo" />

        <TextView
            android:id="@+id/signUpButton"
            style="@style/LoginTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/register_test"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuideLine"
            app:layout_constraintTop_toBottomOf="@id/sign_in_facebook_button" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
