<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/login_animation_list"
    tools:context=".screens.account.AccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fitsSystemWindows="true"
        android:scrollbarStyle="outsideOverlay">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:paddingBottom="@dimen/margin_big"
            android:paddingTop="@dimen/margin_big">

            <android.support.constraint.Guideline
                android:id="@+id/loginLeftGuideLine"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_big" />

            <android.support.constraint.Guideline
                android:id="@+id/loginRightGuideLine"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_big" />

            <ImageView
                android:id="@+id/resetPasswordLogo"
                android:layout_width="@dimen/login_logo_size"
                android:layout_height="@dimen/login_logo_size"
                app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/loginLeftGuideLine"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/login_logo" />

            <TextView
                android:id="@+id/resetPasswordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/marcellus"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/login_title_size"
                app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
                app:layout_constraintStart_toStartOf="@id/loginLeftGuideLine"
                app:layout_constraintTop_toBottomOf="@+id/resetPasswordLogo" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/resetPasswordEmail"
                style="@style/LoginTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
                app:layout_constraintStart_toStartOf="@id/loginLeftGuideLine"
                app:layout_constraintTop_toBottomOf="@+id/resetPasswordTitle" />

            <com.marcinstramowski.socialmeal.views.ProgressButton
                android:id="@+id/resetProgressButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="@id/loginRightGuideLine"
                app:layout_constraintStart_toStartOf="@id/loginLeftGuideLine"
                app:layout_constraintTop_toBottomOf="@+id/resetPasswordEmail"
                app:progress_button_text="@string/remind_password_reset" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</FrameLayout>
